--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<app-nav />
+<!-- <app-nav /> -->
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 <style type="text/tailwindcss">
   @theme {
@@ -182,12 +182,14 @@
     }
   }
 </style> -->
+<app-nav />
 
-<div class="flex items-center justify-center min-h-screen bg-blue-500">
+<app-landing-page />
+<!-- <div class="flex items-center justify-center min-h-screen bg-blue-500">
   <h1 class="text-6xl font-bold text-white">Hello Tailwind CSS!</h1>
   <h2 class="text-2xl font-bold text-gray-800 mb-2">Title</h2>
   <p class="text-gray-600">Your content here</p>
-</div>
+</div> -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
