--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
-@use "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 /* You can add global styles to this file, and also import other style files */
 .tab-panel {
   border: 1px solid #ddd;
