--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <header
-  class="p-3 w-full fixed top-0 z-50 bg-gradient-to-r from-blue-600 to-black"
+  class="p-3 w-full fixed top-0 z-50 bg-gradient-to-r from-yellow-600 to-black"
 >
   <div class="flex align-middle items-center px-10 mx-auto gap-6">
     <a
@@ -40,7 +40,7 @@
           />
           <button
             type="submit"
-            class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition"
+            class="px-4 py-2 bg-yellow-600 text-white rounded hover:bg-blue-600 transition"
           >
             Submit
           </button>
